fix(service): 修复计分方法空实现